# hitster

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hitster.typ  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy-webapp.yml  deploy.yml  test-webapp.yml
app/: .gitignore  README.md  app.json  eas.json  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
app/android/: settings.gradle
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/hitster/qrscanner/: MainActivity.kt  MainApplication.kt
app/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/app/: +not-found.tsx  _layout.tsx  index.tsx
app/app/qr/am/: [id].tsx
app/ios/: Podfile
app/ios/Hitster/: Info.plist  SplashScreen.storyboard
app/ios/Hitster.xcodeproj/: project.pbxproj
app/ios/Hitster.xcodeproj/xcshareddata/xcschemes/: Hitster.xcscheme
app/ios/Hitster.xcworkspace/: contents.xcworkspacedata
app/src/components/: PlayerPage.tsx  ScannerPage.tsx  index.ts
app/src/components/player/: AudioPlayer.tsx  PlayerHeader.tsx  index.ts
app/src/components/scanner/: CameraHelpModal.tsx  QRCodeScanner.tsx  ScannerInfo.tsx  ScannerMessage.tsx  index.ts
app/src/components/ui/: Button.tsx  CloseIconButton.tsx  IconButton.tsx  Input.tsx  PlayPauseButton.tsx  ProgressBar.tsx  Toggle.tsx  index.ts
app/src/constants/: index.ts
app/src/contexts/: AppContext.tsx
app/src/i18n/: de.ts  en.ts  index.ts
app/src/types/: index.ts
app/src/utils/: appleMusic.ts  index.ts  time.ts  validation.ts
generator/: generate.py  interfaces.py  logger.py  main.py  utils.py
generator/connectors/: __init__.py  apple_music.py  interfaces.py  spotify.py
generator/output/: __init__.py  images.py  pdf.py  qr.py
generator/render/: __init__.py  images.py  qr.py  typst.py
generator/templates/: halloween.typ  hitster.typ
generator/themes/: __init__.py  black-white.typ  colored.typ  halloween.typ  summer-breeze.typ
mobile/: capacitor.config.ts  index.html  ionic.config.json  package.json  pnpm-lock.yaml
mobile/src/: App.tsx
mobile/src/components/player/: AudioPlayer.tsx  PlayerHeader.tsx
mobile/src/components/scanner/: QRCodeReader.tsx  ScannerMessage.tsx
mobile/src/components/ui/: IconButton.tsx  PlayPauseButton.tsx  ProgressBar.tsx
mobile/src/contexts/: AppContext.tsx
mobile/src/pages/: Generate.tsx  Play.tsx
mobile/src/theme/: variables.css
mobile/src/types/: index.ts
mobile/src/utils/: appleMusic.ts  audioValidation.ts  cameraUtils.ts  index.ts
src/: apple_music.py  main.py  spotify.py
webapp/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  styles.css  tailwind.config.js  vite.config.ts
webapp/public/: 404.html
webapp/src/: App.tsx  REFACTORING.md  index.css
webapp/src/components/: ErrorBoundary.tsx  PlayerPage.tsx  ScannerPage.tsx  index.ts
webapp/src/components/player/: AudioPlayer.tsx  PlayerActions.tsx  PlayerHeader.tsx
webapp/src/components/scanner/: CameraHelpModal.tsx  QRCodeReader.tsx  ScannerControls.tsx  ScannerInfo.tsx  ScannerMessage.tsx
webapp/src/components/ui/: Button.tsx  CloseIconButton.tsx  IconButton.tsx  Input.tsx  PlayPauseButton.tsx  ProgressBar.tsx
webapp/src/constants/: index.ts
webapp/src/contexts/: AppContext.tsx
webapp/src/hooks/: index.ts  usePlayer.ts  useScanner.ts
webapp/src/types/: index.ts
webapp/src/utils/: appleMusic.ts  audioValidation.ts  index.ts  timeUtils.ts
