[tool.poetry]
name = "hitster"
version = "0.1.0"
description = ""
authors = ["fjlein <fjlein@gmail.com>"]
readme = "README.md"
packages = [{include = "generator"}]

[tool.poetry.dependencies]
python = "^3.12"
typst = "^0.13.0"
spotipy = "^2.25.1"
qrcode = "^8.0"
pillow = "^12.0.0"
matplotlib = "^3.10.1"
pyjwt = "^2.8.0"
cryptography = "^46.0.3"
requests = "^2.31.0"
python-dotenv = "^1.1.1"
pydantic = "^2.12.3"
rich = "^14.2.0"

[tool.poetry.scripts]
generate-hitster-cards = "generator.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
