[tool.poetry]
name = "hitster"
version = "0.1.0"
description = ""
authors = ["fjlein <fjlein@gmail.com>"]
readme = "README.md"
packages = [{include = "generator"}]

[tool.poetry.dependencies]
python = "^3.12"
typst = "^0.13.0"
spotipy = "^2.25.1"
qrcode = "^8.0"
pillow = "^12.0.0"
matplotlib = "^3.10.1"
pyjwt = "^2.8.0"
cryptography = "^46.0.3"
requests = "^2.31.0"
python-dotenv = "^1.1.1"
pydantic = "^2.12.3"
rich = "^14.2.0"
ruff = "^0.14.1"
pre-commit = "^4.3.0"

[tool.poetry.scripts]
generate-hitster-cards = "generator.main:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long, handled by formatter
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR2004", # magic value used in comparison
    "RUF001", # ambiguous string character
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["generator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
