[tool.poetry]
name = "hitster"
version = "1.0.0"
description = ""
authors = ["Jonas Scholl <jonas@scholl.tech>"]
readme = "README.md"
packages = [{include = "generator"}]

[tool.poetry.dependencies]
python = "^3.12"
typst = "^0.14.7"
spotipy = "^2.25.2"
qrcode = "^8.0"
matplotlib = "^3.10.8"
pyjwt = "^2.11.0"
cryptography = "^46.0.5"
requests = "^2.31.0"
python-dotenv = "^1.2.1"
pydantic = "^2.12.5"
rich = "^14.3.2"
cairosvg = "^2.7.1"
ruff = "^0.15.0"
pre-commit = "^4.5.1"
svglib = "^1.6.0"
reportlab = "^4.4.9"
term-image = "^0.7.2"

[tool.poetry.scripts]
generate-hitster-cards = "generator.main:main"

[tool.poetry.group.dev.dependencies]
pymupdf = "^1.26.7"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long, handled by formatter
    "PLR0915", # too many statements in function
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR2004", # magic value used in comparison
    "RUF001", # ambiguous string character
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["generator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
